Debug partiel de l'équilibrage (résultats pas tip top)